Changed as Testing GIT Commit.

--- a/Architech Sandbox/src/classes/AccountManager.cls
+++ b/Architech Sandbox/src/classes/AccountManager.cls
@@ -1,5 +1,6 @@
 @RestResource(urlMapping='/Accounts/*/contacts')
 global class AccountManager {
+	// Testing GIT Commit.
     @HttpGet
     global static Account getAccount() {
         RestRequest req = RestContext.request;
